[package]
name = "elainascan"
version = "1.0.0"
edition = "2021"
authors = ["YURI08"]
license = "MIT"
description = "High-speed Rust CVE & Port Vulnerability Scanner"
repository = "https://github.com/Yuri08loveElaina/ElainaScan"
keywords = ["security", "scanner", "cve", "nmap", "pentest"]
categories = ["command-line-utilities", "network-programming", "security"]
readme = "README.md"

[[bin]]
name = "elainascan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1.37", features = ["full"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
html-escape = "0.2"

# You can re-enable nmap-parser if needed for advanced NSE parsing:
# nmap-parser = "0.5"

[profile.release]
opt-level = "z"   # prioritize size
lto = true        # enable link-time optimization
strip = "debuginfo" # strip debug info for smaller binaries

[features]
default = []
